--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <title>Trabajo Practico N°3</title>
 </head>
 <body>
-    <script src="./js/ejercicio1A.js"></script>
-    <!-- <script></script> -->
+    <!-- <script src="./js/ejercicio1A.js"></script> -->
+    <script src="./js/ejercicio2A.js"></script>
     <!-- <script></script> -->
     <!-- <script></script> -->
 </body>
