--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
     <title>Trabajo Practico N°3</title>
 </head>
 <body>
-    <script src="./js/ejercicio1A.js"></script>
+    <!-- <script src="./js/ejercicio1A.js"></script> -->
     <!-- <script></script> -->
-    <!-- <script></script> -->
+    <script src="./js/ejercicio3A.js"></script>
     <!-- <script></script> -->
 </body>
 </html>
