--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
     <!-- <script src="./js/ejercicio1A.js"></script> -->
     <!-- <script src="./js/ejercicio2A.js"></script> -->
-    <script src="./js/ejercicio3A.js"></script>
-    <!-- <script></script> -->
+    <!-- <script src="./js/ejercicio3A.js"></script> -->
+    <script src="./js/ejercicio4A.js"></script>
 </body>
 </html>
