--- a/index.html
+++ b/index.html
@@ -9,6 +9,13 @@
     <!-- <script src="./js/ejercicio1A.js"></script> -->
     <!-- <script src="./js/ejercicio2A.js"></script> -->
     <!-- <script src="./js/ejercicio3A.js"></script> -->
-    <script src="./js/ejercicio4A.js"></script>
+    <!-- <script src="./js/ejercicio4A.js"></script> -->
+    <script src="./js/ejercicio1.js"></script>
+    <script src="./js/ejercicio2.js"></script>
+    <script src="./js/ejercicio3.js"></script>
+    <script src="./js/ejercicio4.js"></script>
+    <script src="./js/ejercicio5.js"></script>
+    <script src="./js/ejercicio6.js"></script>
+    <script src="./js/ejercicio7.js"></script>
 </body>
 </html>
