--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <!-- <script src="./js/ejercicio2A.js"></script> -->
     <!-- <script src="./js/ejercicio3A.js"></script> -->
     <!-- <script src="./js/ejercicio4A.js"></script> -->
-    <!-- <script src="./js/ejercicio1.js"></script> -->
+    <script src="./js/ejercicio1.js"></script>
     <!-- <script src="./js/ejercicio2.js"></script> -->
     <!-- <script src="./js/ejercicio3.js"></script> -->
     <!-- <script src="./js/ejercicio4.js"></script> -->
