Realice el ejercicio 3 del TP3 de JS, ademas agregue un archivo de estilos.

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./style/style.css">
     <title>Trabajo Practico N°3</title>
 </head>
 <body>
@@ -12,7 +13,7 @@
     <!-- <script src="./js/ejercicio4A.js"></script> -->
     <!-- <script src="./js/ejercicio1.js"></script> -->
     <!-- <script src="./js/ejercicio2.js"></script> -->
-    <!-- <script src="./js/ejercicio3.js"></script> -->
+    <script src="./js/ejercicio3.js"></script>
     <!-- <script src="./js/ejercicio4.js"></script> -->
     <!-- <script src="./js/ejercicio5.js"></script> -->
     <!-- <script src="./js/ejercicio6.js"></script> -->
